--- a/gateway/nginx-proxy/.devcontainer/devcontainer.json
+++ b/gateway/nginx-proxy/.devcontainer/devcontainer.json
@@ -1,11 +1,19 @@
 {
-  "name": "gateway-web-client",
+  "name": "gateway-nginx-proxy",
   "dockerComposeFile": ["../../../docker-compose.yml", ],
-  "service": "gateway-web-client",
+  "service": "gateway-nginx-proxy",
   "workspaceFolder": "/home/node/workspace",
-  "settings": { "terminal.integrated.shell.linux": "/bin/zsh" },
-  "extensions": ["dbaeumer.vscode-eslint"],
+  "settings": {
+    "terminal.integrated.shell.linux": "/bin/zsh"
+  },
+  "extensions": [
+    "hookyqr.beautify",
+    "shawnzhong.system-task-manager",
+    "mutantdino.resourcemonitor",
+    "wayou.vscode-icons-mac",
+    "william-voyek.vscode-nginx"
+  ],
   "shutdownAction": "none",
-  "postCreateCommand": "yarn install",
+  // "postCreateCommand": "yarn install",
   "remoteUser": "node"
 }
