--- a/gateway/nginx-proxy/nginx/nginx.conf
+++ b/gateway/nginx-proxy/nginx/nginx.conf
@@ -2,39 +2,55 @@
 # worker_connections 768;
 # multi_accept on;
 # }
+# pid        /tmp/nginx.pid;
 
 # http {
 
+# client_body_temp_path /tmp/client_temp;
+# proxy_temp_path       /tmp/proxy_temp_path;
+# fastcgi_temp_path     /tmp/fastcgi_temp;
+# uwsgi_temp_path       /tmp/uwsgi_temp;
+# scgi_temp_path        /tmp/scgi_temp;
 upstream client {
   server gateway-web-client:3000;
 }
 
 upstream api {
-  server services-test-api:7100;
+  server services-test-api:7000;
+}
+
+upstream auth {
+  server services-test-api:7000;
 }
 
 server {
 
-  listen 80;
+  listen 80 default_server;
+
+  # server_name www.seesee.space seesee.space;
 
   # location / {
   #   try_files $uri /index.html;
   # }
-
   location / {
     proxy_pass http://client;
   }
 
-  location /sockjs-node {
-    proxy_pass http://client;
-    proxy_http_version 1.1;
-    proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "Upgrade";
-  }
+  # location /sockjs-node {
+  #   proxy_pass http://client;
+  #   proxy_http_version 1.1;
+  #   proxy_set_header Upgrade $http_upgrade;
+  #   proxy_set_header Connection "Upgrade";
+  # }
 
   location /api {
-    rewrite /api/(.*) /$1 break;
+    # rewrite /api/(.*) /$1 break;
     proxy_pass http://api;
+  }
+
+  location /auth {
+    # rewrite /api/(.*) /$1 break;
+    proxy_pass http://auth;
   }
 
   # ##
