--- a/gateway/web-client/Dockerfile
+++ b/gateway/web-client/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine as builder
+FROM node as builder
 
 RUN mkdir -p /home/node/workspace/node_modules && \
   mkdir -p /home/node/workspace/build && \
@@ -8,7 +8,7 @@ WORKDIR '/home/node/workspace'
 
 COPY package.json .
 
-RUN npm install -s
+RUN npm install
 
 USER node
 
@@ -16,10 +16,11 @@ COPY --chown=node:node . .
 
 RUN npm run build
 
-FROM nginx:stable-alpine
+FROM nginx
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
-# EXPOSE 80
+# EXPOSE 3000
 
 COPY --from=builder /home/node/workspace/build/ /usr/share/nginx/html
+
