--- a/services/test-api/Dockerfile
+++ b/services/test-api/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:alpine as builder
+FROM node
 
 RUN mkdir -p /home/node/workspace/node_modules && \
   mkdir -p /home/node/workspace/build && \
@@ -6,14 +6,16 @@ RUN mkdir -p /home/node/workspace/node_modules && \
 
 WORKDIR '/home/node/workspace'
 
-COPY ./package.json ./
+COPY package.json .
 
-RUN npm install -s
+RUN npm install
 
 USER node
 
-COPY --chown=node:node ./ ./
+COPY --chown=node:node . .
 
 RUN npm run build
+
+# EXPOSE 7000
 
 CMD ["npm", "run", "start"]
