--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -1,88 +1,62 @@
-version: '3.7'
+version: "3.7"
 
 services:
 
   gateway-nginx-proxy:
+    container_name: gateway-nginx-proxy
     image: nginx:stable-alpine
-    build: 
+    build:
       context: ./gateway/nginx-proxy/.devcontainer
       dockerfile: Dockerfile.dev
     volumes:
-      - ./gateway/nginx-proxy/default.conf:/etc/nginx/conf.d/default.conf
+      - ./gateway/nginx-proxy/nginx.conf:/etc/nginx/conf.d/default.conf
       - ~/.gitconfig:/home/node/.gitconfig
     ports:
-      - 80:80
-      - 443:443
-    restart: always
-    container_name: gateway-nginx-proxy
-    # links:
-    #   - gateway-web-client
-    #   - services-gallery-api
-    #   - services-test-api
-    #   - services-users-api
-    #   - web-gallery-pwa
+      - 8080:8080
+    networks:
+      - test-network
 
-  gateway-web-client:
-    image: mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
-    build: 
-      context: ./gateway/web-client/.devcontainer
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./gateway/web-client:/home/node/workspace
-      - ~/.gitconfig:/home/node/.gitconfig
-    ports:
-      - 3030:3030
-    command: sleep infinity
-    container_name: gateway-web-client
+  # gateway-web-client:
+  #   image: mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
+  #   build:
+  #     context: ./gateway/web-client/.devcontainer
+  #     dockerfile: Dockerfile.dev
+  #   volumes:
+  #     - ./gateway/web-client:/home/node/workspace
+  #     - ~/.gitconfig:/home/node/.gitconfig
+  #   ports:
+  #     - 3030:3030
+  #   command: sleep infinity
+  #   container_name: gateway-web-client
 
-  services-gallery-api:
-    image: mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
-    build: 
-      context: ./services/gallery-api/.devcontainer
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./services/gallery-api:/home/node/workspace
-      - ~/.gitconfig:/home/node/.gitconfig
-    ports:
-      - 6000:6000
-    command: sleep infinity
-    container_name: services-gallery-api
+  # services-test-api:
+  #   image: mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
+  #   build:
+  #     context: ./services/test-api/.devcontainer
+  #     dockerfile: Dockerfile.dev
+  #   volumes:
+  #     - ./services/test-api:/home/node/workspace
+  #     - ~/.gitconfig:/home/node/.gitconfig
+  #   ports:
+  #     - 7000:7000
+  #   command: sleep infinity
+  #   container_name: services-test-api
 
-  servicestestapi:
-    image: mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
-    build: 
-      context: ./services/test-api/.devcontainer
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./services/test-api:/home/node/workspace
-      - ~/.gitconfig:/home/node/.gitconfig
-    ports:
-      - 7000:7000
-    command: sleep infinity
-    container_name: services-test-api
+  # web-gallery-pwa:
+  #   build:
+  #     context: ./web/gallery-pwa/.devcontainer
+  #     dockerfile: Dockerfile.dev
+  #   image: web-gallery-pwa:development
+  #   volumes:
+  #     - ./web/gallery-pwa:/home/node/workspace
+  #     - ~/.gitconfig:/home/node/.gitconfig
+  #   ports:
+  #     - 3000:3000
+  #   command: sleep infinity
+  #   container_name: web-gallery-pwa
 
-  services-users-api:
-    image: mcr.microsoft.com/vscode/devcontainers/javascript-node:0-12
-    build: 
-      context: ./services/users-api/.devcontainer
-      dockerfile: Dockerfile.dev
-    volumes:
-      - ./services/users-api:/home/node/workspace
-      - ~/.gitconfig:/home/node/.gitconfig
-    ports:
-      - 8000:8000
-    command: sleep infinity
-    container_name: services-users-api
-  
-  web-gallery-pwa:
-    build: 
-      context: ./web/gallery-pwa/.devcontainer
-      dockerfile: Dockerfile.dev
-    image: web-gallery-pwa:development
-    volumes:
-      - ./web/gallery-pwa:/home/node/workspace
-      - ~/.gitconfig:/home/node/.gitconfig
-    ports:
-      - 3000:3000
-    command: sleep infinity
-    container_name: web-gallery-pwa
+# volumes:
+#   test-data:
+
+networks:
+  test-network:
