--- a/gateway/nginx-proxy/Dockerfile
+++ b/gateway/nginx-proxy/Dockerfile
@@ -1,7 +1,7 @@
-FROM nginx:stable-alpine
+FROM nginx
 
 RUN rm /etc/nginx/conf.d/default.conf
 
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
 
-RUN chown nginx:nginx /usr/share/nginx/html/ -R
+RUN chown -R nginx:nginx /usr/share/nginx/html/
