--- a/gateway/web-client/package.json
+++ b/gateway/web-client/package.json
@@ -2,12 +2,15 @@
   "name": "seesee-gateway-web-client",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:7100",
   "dependencies": {
-    "axios": "^0.18.0",
-    "react": "^16.4.2",
-    "react-dom": "^16.4.2",
-    "react-scripts": "1.1.4"
+    "axios": "^0.19.2",
+    "material-ui": "1.0.0-beta.43",
+    "material-ui-icons": "1.0.0-beta.36",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-hot-loader": "4.1.2",
+    "react-router-dom": "^5.1.2",
+    "react-scripts": "^3.4.1"
   },
   "scripts": {
     "start": "react-scripts start",
