--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,80 +7,56 @@ services:
     build:
       context: ./gateway/nginx-proxy
       dockerfile: Dockerfile
-    # volumes:
-      #  - $PWD/nginx/nginx.conf:/etc/nginx/nginx.conf
-      # - ./gateway/nginx-proxy/nginx/nginx.conf:/etc/nginx/conf.d/default.conf
     ports:
       - 80:80
-    # networks:
-    #   - test-network
+      - 443:443
     depends_on:
       - gateway-web-client
       - services-test-api
 
   gateway-web-client:
-    container_name: gateway-web-client
     build:
       context: ./gateway/web-client
       dockerfile: Dockerfile
-    # volumes:
-      # - ./gateway/web-client:/home/node/workspace
-      # - node_modules:/home/node/workspace/node_modules
-    ports:
-      - 3000:3000
-    # networks:
-    #   - test-network
+    container_name: gateway-web-client
+    expose:
+      - 3000
 
   services-test-api:
     container_name: services-test-api
     build:
       context: ./services/test-api
       dockerfile: Dockerfile
-    # volumes:
-      # - ./services/test-api:/home/node/workspace
-      # - node_modules:/home/node/workspace/node_modules
-    ports:
-      - 7000:7000
-    env_file: .env
+    expose:
+      - 7000
+    env_file: ./services/test-api/docker.env
     environment:
       - MONGO_USERNAME=$MONGO_USERNAME
       - MONGO_PASSWORD=$MONGO_PASSWORD
       - MONGO_HOSTNAME=services-test-data
       - MONGO_PORT=$MONGO_PORT
       - MONGO_DB=$MONGO_DB
-    # networks:
-    #   - test-network
     depends_on:
       - services-test-data
 
   services-test-data:
     container_name: services-test-data
     image: mongo
-    # restart: unless-stopped
-    env_file: .env
+    restart: unless-stopped
+    env_file: ./services/test-api/docker.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=$MONGO_USERNAME
       - MONGO_INITDB_ROOT_PASSWORD=$MONGO_PASSWORD
     volumes:
       - test-db:/data/db
-    # networks:
-    #   - test-network
-
-  # web-gallery-pwa:
-  #   build:
-  #     context: ./web/gallery-pwa/.devcontainer
-  #     dockerfile: Dockerfile.dev
-  #   image: web-gallery-pwa:development
-  #   volumes:
-  #     - ./web/gallery-pwa:/home/node/workspace
-  #     - ~/.gitconfig:/home/node/.gitconfig
-  #   ports:
-  #     - 3000:3000
-  #   command: sleep infinity
-  #   container_name: web-gallery-pwa
+    ports:
+      - 0.0.0.0:27107:7000
 
 volumes:
   test-db:
 
 # networks:
 #   test-network:
+#   auth-network:
+#   users-network:
+#   listings-network:
