--- a/.vscode/devcontainer.json
+++ b/.vscode/devcontainer.json
@@ -1,6 +1,7 @@
 {
   "name": "gateway-nginx-proxy",
-  "dockerComposeFile": ["../../../docker-compose.yml"],
+  "dockerfile": "./Dockerfile",
+  // "dockerComposeFile": ["./docker-compose.yml"],
   "service": "gateway-nginx-proxy",
   "workspaceFolder": "/home/node/workspace",
   "settings": { "terminal.integrated.shell.linux": "/bin/zsh" },
