--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,16 +2,9 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "launch test service",
-      "program": "${workspaceFolder}/services/test/api/build/index.js",
+      "name": "launch users api",
       "request": "launch",
-      "skipFiles": ["<node_internals>/**"],
-      "type": "pwa-node"
-    },
-    {
-      "name": "launch users service",
       "program": "${workspaceFolder}/services/users/api/build/index.js",
-      "request": "launch",
       "skipFiles": ["<node_internals>/**"],
       "type": "pwa-node"
     },
