--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,96 +1,102 @@
 version: "3.7"
 services:
 
-  gateway-nginx-proxy:
-    container_name: gateway-nginx-proxy
-    build:
-      context: ./gateway/nginx-proxy
-      dockerfile: Dockerfile
+  nginx_proxy:
     ports:
       - 80:80
       - 443:443
+    networks:
+      - back_tier
+    container_name: services:nginx_proxy
     volumes:
       - /etc/nginx/conf.d
-    depends_on:
-      - gateway-web-client
-      - users_service
-    networks:
-      - network
-
-  gateway-web-client:
     build:
-      context: ./gateway/web-client
       dockerfile: Dockerfile
-    container_name: gateway-web-client
+      context: ./gateway/nginx_proxy
+    depends_on:
+      - web_client
+      - users_api
+
+  web_client:
     ports:
       - 3000:3000
-    volumes:
-      - ./gateway/web-client/node_modules
-      - ./gateway/web-client:/home/node/workspace
     networks:
-      - network
-
-  users_service:
-    container_name: users_service
+      - front_tier
+    container_name: gateways:web_client
+    volumes:
+      - ./gateway/web_client/node_modules
+      - ./gateway/web_client:/home/node/workspace
     build:
-      context: ./services/users/api
+      context: ./gateway/web_client
       dockerfile: Dockerfile
+    depends_on:
+      - users_api
+
+  users_api:
+    ports:
+      - 7000:7000
+    networks:
+      - back_tier
+    container_name: services:users_api
+    volumes:
+      - /home/node/workspace/node_modules
+      - ./services/users/api:/home/node/workspace
     env_file: ./services/users/api/.env
     environment:
       - MONGO_USERNAME=dany
       - MONGO_PASSWORD=dany
-      - MONGO_HOSTNAME=users_data
+      - MONGO_HOSTNAME=users_mongo
       - MONGO_PORT=27017
       - MONGO_DB=usersdatabase
       - REDIS_HOST=redis
       - REDIS_PORT=6379
-    ports:
-      - 7000:7000
-    volumes:
-      - /home/node/workspace/node_modules
-      - ./services/users/api:/home/node/workspace
-    networks:
-      - network
-      - users_network
+    build:
+      context: ./services/users/api
+      dockerfile: Dockerfile
     depends_on:
-      - users_data
+      - users_mongo
 
-  users_data:
-    container_name: users_data
+  users_mongo:
     image: mongo
+    ports:
+      - 0.0.0.0:27107:7000
     restart: unless-stopped
+    networks:
+      - back_tier
+    container_name: services:users_mongo
+    volumes:
+      - users_db:/data/db
     env_file: ./services/users/api/.env
     environment:
       - MONGO_INITDB_ROOT_USERNAME=dany
       - MONGO_INITDB_ROOT_PASSWORD=dany
-    volumes:
-      - users_db_vol:/data/db
-    ports:
-      - 0.0.0.0:27107:7000
-    networks:
-      - network
-      - users_network
 
-  redis:
-    container_name: redis
+  users_redis:
     image: 'redis:latest'
+    restart: unless-stopped
+    networks:
+      - back_tier
+    container_name: services:users_redis
 
   redis_worker:
-    container_name: redis_worker
+    networks:
+      - back_tier
+    container_name: services:redis_worker
+    volumes:
+      - /app/node_modules
+      - ./services/redis:/app
     environment:
       - REDIS_HOST=redis
       - REDIS_PORT=6379
     build:
       context: ./services/redis
       dockerfile: Dockerfile
-    volumes:
-      - /app/node_modules
-      - ./services/redis:/app
+    depends_on:
+      - users_redis
 
 volumes:
-  users_db_vol:
+  users_db:
 
 networks:
-  network:
-  users_network:
-  listings_network:
+  front_tier:
+  back_tier:
