--- a/services/nginx/proxy/Dockerfile
+++ b/services/nginx/proxy/Dockerfile
@@ -1,7 +1,7 @@
-FROM nginx
+FROM nginx:alpine
 
 RUN rm /etc/nginx/conf.d/default.conf
 
-COPY nginx/nginx.conf /etc/nginx/conf.d/default.conf
+COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 RUN chown -R nginx:nginx /usr/share/nginx/html/
