--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,7 +13,7 @@
       "label": "clean up",
       "type": "shell",
       "detail": "cleans workspace objects",
-      "command": "cd scripts && source clean.sh",
+      "command": "cd .scripts && source clean.sh",
       "problemMatcher": [],
       "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
@@ -21,7 +21,7 @@
       "label": "create secrets",
       "type": "shell",
       "detail": "create docker secrets",
-      "command": "cd scripts && source secrets.sh",
+      "command": "cd .scripts && source secrets.sh",
       "problemMatcher": [],
       "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
@@ -29,7 +29,7 @@
       "label": "build images",
       "type": "shell",
       "detail": "builds and tags all docker images",
-      "command": "cd scripts && source build.sh",
+      "command": "cd .scripts && source build.sh",
       "problemMatcher": [],
       "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
@@ -37,7 +37,7 @@
       "label": "push images",
       "type": "shell",
       "detail": "pushes images to docker hub",
-      "command": "cd scripts && source push.sh",
+      "command": "cd .scripts && source push.sh",
       "problemMatcher": [],
       "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
@@ -45,7 +45,7 @@
       "label": "lift containers",
       "type": "shell",
       "detail": "lift and detach all docker-compose containers",
-      "command": "cd scripts && source deploy.sh",
+      "command": "cd .scripts && source deploy.sh",
       "problemMatcher": [],
       "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     },
@@ -53,7 +53,7 @@
       "label": "lightsail",
       "type": "shell",
       "detail": "create aws-cli docker containers",
-      "command": "cd scripts && source lightsail.sh",
+      "command": "cd .scripts && source lightsail.sh",
       "problemMatcher": [],
       "presentation": { "echo": true, "reveal": "always", "focus": true, "panel": "shared", "showReuseMessage": true, "clear": false },
     }
