--- a/services/users/api/Dockerfile
+++ b/services/users/api/Dockerfile
@@ -1,18 +1,13 @@
 FROM node:alpine
 
-RUN mkdir -p /home/node/workspace/node_modules && \
-  mkdir -p /home/node/workspace/build && \
-  chown -R node:node /home/node/workspace
+WORKDIR usr/src/app
 
-
-WORKDIR /home/node/workspace
 COPY package.json .
+
 RUN npm install --no-progress --ignore-optional
 
+COPY . .
 
-USER node
-COPY --chown=node:node . .
 RUN npm run build
-
 
 CMD ["npm", "run", "start"]
