--- a/services/tunnel/tunnel.conf
+++ b/services/tunnel/tunnel.conf
@@ -3,7 +3,7 @@ server {
   listen [::]:80;
 
   # Replace with your domain, including subdomain. For example, "server_name dev.freewaffle.net" or "server_name *.freewaffle.net"
-  server_name seesee.space;
+  server_name dev.seesee.space;
 
   location / {
     proxy_pass http://127.0.0.1:4000;
