--- a/.tests/.travis2.yml
+++ b/.tests/.travis2.yml
@@ -1,11 +1,3 @@
-<<<<<<< HEAD
-branches:
-  only:
-  - master
-  
-services:
-  - docker
-=======
 os: linux
 dist: xenial
 
@@ -21,15 +13,14 @@ env:
     - IMAGE=jrcs/letsencrypt-nginx-proxy-companion
     - COMPOSE_VERSION=1.25.4
     - YQ_VERSION=3.2.1
-  jobs:
-    - TEST_FILE=2-containers/compose-v2/docker-compose.yaml
-    - TEST_FILE=2-containers/compose-v3/environment/docker-compose.yaml
-    - TEST_FILE=2-containers/compose-v3/labels/docker-compose.yaml
-    - TEST_FILE=3-containers/compose-v2/environment/docker-compose.yaml
-    - TEST_FILE=3-containers/compose-v2/labels/docker-compose.yaml
-    - TEST_FILE=3-containers/compose-v3/environment/docker-compose.yaml
-    - TEST_FILE=3-containers/compose-v3/labels/docker-compose.yaml
->>>>>>> develop
+  # jobs:
+  #   - TEST_FILE=2-containers/compose-v2/docker-compose.yaml
+  #   - TEST_FILE=2-containers/compose-v3/environment/docker-compose.yaml
+  #   - TEST_FILE=2-containers/compose-v3/labels/docker-compose.yaml
+  #   - TEST_FILE=3-containers/compose-v2/environment/docker-compose.yaml
+  #   - TEST_FILE=3-containers/compose-v2/labels/docker-compose.yaml
+  #   - TEST_FILE=3-containers/compose-v3/environment/docker-compose.yaml
+  #   - TEST_FILE=3-containers/compose-v3/labels/docker-compose.yaml
 
 before_install:
   - sudo rm /usr/local/bin/docker-compose
